# ai-workout-coach

./: .dockerignore  .env.example  .gitignore  AI_WORKFLOW.md  DECISIONS.md  Dockerfile  EVALUATION.md  EVALUATION_REPORT.md  README.md  docker-compose.yml  pyproject.toml
app/: application_container.py  main.py
app/agent/: agent.py  agent_schemas.py  tool_executor.py  tool_registry.py
app/agent/tools/: base_tool.py  calculator_tool.py  rag_tool.py  workout_analyzer_tool.py
app/api/: api_schemas.py  exceptions.py
app/configs/: llm_settings.py  rag_settings.py
app/llm/: base_generator.py  generator_factory.py  llm_schemas.py  openai_generator.py  schemas.py
app/prompts/: context_prompt_builder.py  static_system_prompts.py  system_prompt_builder.py
app/rag/: rag_context.py  rag_schemas.py  rag_service.py
app/rag/embedding/: base_embedder.py  embedder_factory.py  openai_embedder.py
app/workout_analysis/: workout_analyzer.py  workout_context.py  workout_normalizer.py  workout_prompt_builder.py  workout_schemas.py  workout_service.py  workout_validator.py
docs/: DECISIONS.md  REQUIREMENTS.md
evaluation/: conftest.py  models.py  report_builder.py  runner.py  test_rag_search.py
evaluation/datasets/: adversarial_cases.json  agent_cases.json  rag_search_cases.json  workout_analysis_cases.json  workout_analyze_cases.json
evaluation/evaluators/: adversarial_evaluator.py  agent_evaluator.py  rag_search_evaluator.py  workout_analysis_evaluator.py
evaluation/judges/: base_judge.py  fact_coverage_judge.py  faithfulness_judge.py  source_judge.py  utilities.py
(+49 files in other folders)
